--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "client": "link:",
+    "jspdf": "^2.5.1",
     "node": "^21.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
