--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-pdf/renderer": "^3.3.8",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "client": "link:",
+    "cloudinary": "^2.0.3",
     "jspdf": "^2.5.1",
     "node": "^21.6.2",
     "react": "^18.2.0",
